fix: Build failure related to lombok on JDK23
cf. https://jdk.java.net/23/release-notes#:~:text=As%20of%20JDK%2023%2C%20annotation,on%20the%20javac%20command%20line.

Fix #347