@@ -52,7 +52,7 @@ val MAKE = with(os) {
 tasks {
     withType<JavaCompile> {
         options.encoding = "UTF-8"
-        options.compilerArgs = listOf("-h", file("javah").absolutePath)
+        options.compilerArgs = listOf("-h", file("javah").absolutePath, "-proc:full")
     }
     test {
         useJUnitPlatform()
