@@ -48,6 +48,7 @@
     <javac destdir="build/classes/java/main" includeantruntime="false" debug="true"
            release="17" nativeheaderdir="javah">
       <src path="src/main/java"/>
+      <compilerarg value="-proc:full" />
       <classpath>
         <fileset dir="${common-dir}/products">
           <include name="*.jar"/>
